[gd_scene load_steps=24 format=2]

[ext_resource path="res://Imagens/cyberescape.png" type="Texture" id=1]
[ext_resource path="res://Cenas/CyberEscape.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Cybero/55/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/titulo/CyberSansFont-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Imagens/holograma.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Cybero/cybero.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("main/fundo/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 110
outline_color = Color( 0.396078, 0.0980392, 0.196078, 0.647059 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.705882 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.247059, 0.603922, 0.737255, 0.729412 )
draw_center = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.203922, 0.541176, 0.670588, 0.415686 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.301961, 0.133333, 0.188235, 1 )
draw_center = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.156863, 0.462745, 0.580392, 0.756863 )
draw_center = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.529412, 0.156863, 0.278431, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=11]
size = 50
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.231373, 0.784314, 0.796078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0941176, 0.466667, 0.478431, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=14]
draw_center = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.14902, 0.643137, 0.654902, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=16]
size = 32
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=17]
draw_center = false

[node name="CyberEscape" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 1 )

[node name="main" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fundo" type="Control" parent="main"]
anchor_right = 0.5
margin_right = 960.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="main/fundo"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 640, 360 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Control" type="Control" parent="main"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo" type="Label" parent="main/Control"]
margin_left = -1.0
margin_top = 7.0
margin_right = 381.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.462745, 0.580392, 0.756863 )
text = "CYBER
ESCAPE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo2" type="Label" parent="main/Control"]
margin_left = 22.0
margin_top = 19.0
margin_right = 404.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.87451, 0.188235, 0.188235, 0.796078 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "CYBER
ESCAPE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo3" type="Label" parent="main/Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 392.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 2 )
text = "CYBER
ESCAPE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="main/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -632.0
margin_top = -404.0
margin_right = -212.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="main/Control/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="main/Control/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -275.0
margin_right = -132.0
margin_bottom = 220.0
rect_scale = Vector2( 1.3, 1.3 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="main/Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -247.0
margin_right = 145.0
margin_bottom = 233.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar" type="Button" parent="main/Control/Control/VBoxContainer"]
margin_left = 40.0
margin_top = 30.0
margin_right = 340.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.360784, 0.360784, 0.360784, 1 )
disabled = true

[node name="continuar_blue" type="Button" parent="main/Control/Control/VBoxContainer/continuar"]
visible = false
margin_left = -6.0
margin_top = -4.0
margin_right = 369.0
margin_bottom = 86.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_colors/font_color = Color( 0.156863, 0.462745, 0.580392, 0.756863 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar_red" type="Button" parent="main/Control/Control/VBoxContainer/continuar"]
visible = false
margin_left = 6.0
margin_top = 4.0
margin_right = 381.0
margin_bottom = 94.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_colors/font_color = Color( 0.87451, 0.188235, 0.188235, 0.796078 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar_ativo" type="Button" parent="main/Control/Control/VBoxContainer/continuar"]
visible = false
margin_right = 375.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar_disabled" type="Button" parent="main/Control/Control/VBoxContainer/continuar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.5
margin_top = -45.0
margin_right = 187.5
margin_bottom = 45.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="comecar" type="Button" parent="main/Control/Control/VBoxContainer"]
margin_left = 40.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 230.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )

[node name="comecar2" type="Button" parent="main/Control/Control/VBoxContainer/comecar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -50.0
margin_right = 156.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_colors/font_color = Color( 0.156863, 0.462745, 0.580392, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comecar3" type="Button" parent="main/Control/Control/VBoxContainer/comecar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -39.0
margin_right = 174.0
margin_bottom = 51.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_colors/font_color = Color( 0.87451, 0.188235, 0.188235, 0.796078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comecar4" type="Button" parent="main/Control/Control/VBoxContainer/comecar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -45.0
margin_right = 164.0
margin_bottom = 45.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opcoes" type="Button" parent="main/Control/Control/VBoxContainer"]
margin_left = 40.0
margin_top = 250.0
margin_right = 340.0
margin_bottom = 340.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )

[node name="opcoes2" type="Button" parent="main/Control/Control/VBoxContainer/opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -51.0
margin_right = 140.0
margin_bottom = 39.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.156863, 0.462745, 0.580392, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opcoes3" type="Button" parent="main/Control/Control/VBoxContainer/opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -38.0
margin_right = 159.0
margin_bottom = 52.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.87451, 0.188235, 0.188235, 0.796078 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opcoes4" type="Button" parent="main/Control/Control/VBoxContainer/opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -45.0
margin_right = 150.0
margin_bottom = 45.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair" type="Button" parent="main/Control/Control/VBoxContainer"]
margin_left = 40.0
margin_top = 360.0
margin_right = 340.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )

[node name="sair2" type="Button" parent="main/Control/Control/VBoxContainer/sair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -52.0
margin_right = 141.0
margin_bottom = 38.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.156863, 0.462745, 0.580392, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair3" type="Button" parent="main/Control/Control/VBoxContainer/sair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -37.0
margin_right = 160.0
margin_bottom = 53.0
rect_min_size = Vector2( 300, 90 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.87451, 0.188235, 0.188235, 0.796078 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair4" type="Button" parent="main/Control/Control/VBoxContainer/sair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -45.0
margin_right = 150.0
margin_bottom = 45.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="esmaecer" type="ColorRect" parent="main/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fechar_esmaecer" type="Button" parent="main/Control/esmaecer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opcoes" type="Panel" parent="main/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="main/Control/opcoes"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="idioma" type="VBoxContainer" parent="main/Control/opcoes/VBoxContainer"]
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 15

[node name="Label" type="Label" parent="main/Control/opcoes/VBoxContainer/idioma"]
margin_right = 500.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 11 )
text = "Idioma"
align = 1
valign = 1

[node name="ptbr" type="Button" parent="main/Control/opcoes/VBoxContainer/idioma"]
margin_left = 20.0
margin_top = 67.0
margin_right = 480.0
margin_bottom = 117.0
rect_min_size = Vector2( 460, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.968627, 0.968627, 0.968627, 1 )
text = "Português"

[node name="english" type="Button" parent="main/Control/opcoes/VBoxContainer/idioma"]
margin_left = 20.0
margin_top = 132.0
margin_right = 480.0
margin_bottom = 182.0
rect_min_size = Vector2( 460, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.968627, 0.968627, 0.968627, 1 )
text = "Inglês"

[node name="HSeparator" type="Panel" parent="main/Control/opcoes/VBoxContainer"]
margin_top = 204.0
margin_right = 500.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 17 )

[node name="musica" type="VBoxContainer" parent="main/Control/opcoes/VBoxContainer"]
margin_top = 228.0
margin_right = 500.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 200 )
[connection signal="pressed" from="main/Control/Control/VBoxContainer/comecar" to="." method="_on_comecar_pressed"]
[connection signal="pressed" from="main/Control/Control/VBoxContainer/comecar/comecar2" to="." method="_on_comecar_pressed"]
[connection signal="pressed" from="main/Control/Control/VBoxContainer/comecar/comecar3" to="." method="_on_comecar_pressed"]
[connection signal="pressed" from="main/Control/Control/VBoxContainer/comecar/comecar4" to="." method="_on_comecar_pressed"]
[connection signal="pressed" from="main/Control/Control/VBoxContainer/opcoes/opcoes4" to="." method="_on_opcoes4_pressed"]
[connection signal="pressed" from="main/Control/esmaecer/fechar_esmaecer" to="." method="_on_fechar_esmaecer_pressed"]
[connection signal="pressed" from="main/Control/opcoes/VBoxContainer/idioma/ptbr" to="." method="_on_ptbr_pressed"]
[connection signal="pressed" from="main/Control/opcoes/VBoxContainer/idioma/english" to="." method="_on_english_pressed"]
